--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "noon-assessment",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "14.x"
+  },
   "scripts": {
     "dev": "nodemon server/index.js",
     "build": "next build",
