--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "node": "14.x"
   },
   "scripts": {
-    "dev": "nodemon server/index.js",
+    "dev": "node server/index.js",
     "build": "next build",
-    "start": "node server/index.js",
+    "start": "NODE_ENV=production node server.js",
     "lint": "next lint"
   },
   "dependencies": {
