--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "dev": "node server/index.js",
     "build": "next build",
     "start": "NODE_ENV=production node server/index.js",
+    "server": "nodemon server/index.js",
+    "client": "npm start --prefix client",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client",
     "lint": "next lint"
   },
   "dependencies": {
