--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "build": "next build",
     "start": "NODE_ENV=production node server/index.js",
     "server": "nodemon server/index.js",
-    "client": "npm start --prefix client",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client",
+    "client": "npm start --prefix server",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix server && npm run build --prefix server",
     "lint": "next lint"
   },
   "dependencies": {
