--- a/package.json
+++ b/package.json
@@ -8,10 +8,7 @@
   "scripts": {
     "dev": "node server/index.js",
     "build": "next build",
-    "start": "NODE_ENV=production node server/index.js",
-    "server": "nodemon server/index.js",
-    "client": "npm start --prefix server",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix server && npm run build --prefix server",
+    "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
