--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "noon-assessment",
   "version": "0.1.0",
   "private": true,
+  "cacheDirectories": [
+    ".next/cache"
+  ],
   "engines": {
     "node": "14.x"
   },
