--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "scripts": {
     "dev": "node server/index.js",
+    "heroku-postbuild": "npm run build",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
